v1.4: Restructure repo, wire up all Paper-config-backed settings, add benchmark framework
- Move all Paper source to source/ subdirectory
- Wire disableThunder, disableIceAndSnow, enableAlternateCurrent in config
- Wire portal-related timeouts, tick rates, bandwidth, mob caps
- Fix levelLoadListener compile error in constructors permanently
- Add comprehensive benchmark suite (bench-quick, bench-warmup, final-bench)
- Write BENCHMARK.md with idle/chunk-gen/entity/hopper throughput tests
- Add start.sh with CDS, auto RAM/CPU detection, JVM tuning
- Remove stale features.bak/, build/, .gradle/, libraries/ artifacts
- Clean up .gitignore for restructured layout